2001-10-25  Matt Wilson  <msw@redhat.com>

	* gtk/gtktexttag.c (gtk_text_tag_class_init): the valid range for
	the 'indent' property is G_MININT to G_MAXINT.  Don't use
	-G_MAXINT for the minimum of the 'rise' property, use G_MININT
	instead.

2001-10-24  Anders Carlsson  <andersca@gnu.org>

	* gtk/gtktreeview.c: 
	(gtk_tree_view_real_expand_row): add an animate argument
	(gtk_tree_view_real_collapse_row): likewise
	
	(gtk_tree_view_button_press), (gtk_tree_view_button_release), 
	(gtk_tree_view_collapse_all), (gtk_tree_view_expand_row),
	(gtk_tree_view_collapse_row): update functions that call
	real_{expand|collapse}_row to set the animate argument 
	accordingly.
	
2001-10-24  Alex Larsson  <alexl@redhat.com>

	* gdk/linux-fb/gdkfont-fb.c:
	Update to new Pango APIs

	* gdk/linux-fb/gdkproperty-fb.c:
	Update to new GdkAtom APIs

	* gdk/linux-fb/gdkwindow-fb.c:
	Remove warnings

Mon Oct 22 20:07:21 2001  Jonathan Blandford  <jrb@redhat.com>

	* gtk/gtktreestore.c (gtk_tree_store_prepend): Fix docs, #62808

Wed Oct 24 22:54:07 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreemodelsort.c (gtk_tree_model_sort_row_inserted): treat
	s_path as a child path

Wed Oct 24 20:29:47 2001  Kristian Rietveld  <kristian@planet.nl>

	* gtk/gtktreemodelsort.c: more changes in an attempt to get
	it right. It's not yet ready for general consumption.

	* tests/treestoretest.c: add a button and entry for the new
	iter_change function
	(iter_change): new function, to test
	the row_changed signal implementation of the GtkTreeModelSort

	* tests/testtreesort.c: cleanups, changes to test more features
	of the GtkTreeModelSort at once

2001-10-24  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextbuffer.c (clipboard_clipboard_buffer_received):
	remove hack to strip off the bogus newline, since we killed the
	bogus newline; fixes #61779

2001-10-24  Havoc Pennington  <hp@redhat.com>

	* gtk/gtktextview.c (gtk_text_view_update_adjustments): don't
	create layout if we didn't have one